Navigation Bar touch-up & formating

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" media="screen" href="css/style.css">
   <link rel="stylesheet" href="css/bootstrap4-neon-glow.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <style>
   html, body {margin: 0; height: 100%; overflow: hidden}
@@ -39,18 +40,17 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a href="index.html" class="pl-md-0 p-3 text-light">Start</a>
-                <a href="app.html" class="p-3 text-decoration-none text-light"
-                  >App example</a
-                >
-                <a href="form.html" class="p-3 text-decoration-none text-light"
-                  >Form example</a
-                >
-              </div>
+                <a href="index.html" class="fa fa-home" style="font-size:22px;color:white">&nbsp;<strong> Home </strong></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="event.html" class="fa fa-bug" style="font-size:22px;color:white">&nbsp;<strong> Events</strong></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="achievements.html" class="fa fa-trophy" style="font-size:22px;color:white">&nbsp;<strong> Achievements</strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="about.html" class="fa fa-info" style="font-size:22px;color:white">&nbsp;<strong> About ISC </strong> </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="contact.html" class="fa fa-user-secret" style="font-size:22px;color:white">&nbsp;<strong> Contact Us</strong> </a>
+             </div>
             </div>
           </nav>
         </div>
       </div>
+
 <!-- particles.js container -->
 <div id="particles-js">
   <div class="panel jumbotron bg-transparent mb-0 radius-0">
