--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,11 @@
   </head>
   <body>
 
-<div class=" media="screen"> 
+<div>
+<a href="index.html"> Home</a>
 <h1> Contact Us Page </h1>
+
 </div>
-
-
 
   </body>
 </html>
