--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a href="index.html" class="fa fa-home" style="font-size:20px;color:white">&nbsp;<strong> Home </strong></a>
-                <a href="event.html" class="fa fa-bug" style="font-size:20px;color:white">&nbsp;<strong> Events </strong> </a>
-                <a href="achievements.html" class="fa fa-trophy" style="font-size:20px;color:white">&nbsp;<strong> Achievements</strong> </a>
-                <a href="about.html" class="fa fa-info" style="font-size:20px;color:white">&nbsp;<strong> About ISC </strong> </a>
-                <a href="contact.html" class="fa fa-user-secret" style="font-size:20px;color:white">&nbsp;<strong> Contact Us</strong> </a>
+                <a href="index.html" class="fa fa-home" style="font-size:20px;color:white"><strong> Home </strong></a>
+                <a href="event.html" class="fa fa-bug" style="font-size:20px;color:white"><strong> Events </strong> </a>
+                <a href="achievements.html" class="fa fa-trophy" style="font-size:20px;color:white"><strong> Achievements</strong> </a>
+                <a href="about.html" class="fa fa-info" style="font-size:20px;color:white"><strong> About ISC </strong> </a>
+                <a href="contact.html" class="fa fa-user-secret" style="font-size:20px;color:white"><strong> Contact Us</strong> </a>
              </div>
             </div>
           </nav>
