--- a/CodeofConduct.html
+++ b/CodeofConduct.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   
     <title>COC</title>
-    <link rel="stylesheet" href="coc.css">
+    <link rel="stylesheet" href="css/coc.css">
 </head>
 <body>
     <section>
