--- a/event.html
+++ b/event.html
@@ -20,20 +20,22 @@ body, html {height: 100%}
   background-position: center;
   background-size: cover;
 }
-}
+
 </style>
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    <a href="index.html" class="fa fa-home"><strog> LOGO </strong></a>
+<body>
+  <a href="CodeofConduct.html">COC</a>
+  <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+    <div class="w3-display-topleft w3-padding-large w3-xlarge">
+      <a href="index.html" class="fa fa-home"><strog> LOGO </strong></a>
+    </div>
+    <div class="w3-display-middle">
+      <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
+      <hr class="w3-border-grey" style="margin:auto;width:40%">
+      <p class="w3-large w3-center"> Wait...! Wait...! </p>
+    </div>
+    <div class="w3-display-bottomleft w3-padding-large">
+      Created by team <a href="#"> The Cyber Alliance Club </a>
+    </div>
   </div>
-  <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center"> Wait...! Wait...! </p>
-  </div>
-  <div class="w3-display-bottomleft w3-padding-large">
-    Created by team <a href="#"> The Cyber Alliance Club </a>
-  </div>
-</div>
 </body>
 </html>
