--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   <link rel="stylesheet" media="screen" href="css/style.css">
   <link rel="stylesheet" href="css/bootstrap4-neon-glow.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 </head>
 <style>
-  html, body {margin: 0; height: 100%; overflow: hidden}
+html, body{margin: 0; height: 100%; overflow: hidden}
   .panel {
     font-family: 'Source Sans Pro';
-    font-size: 1.3em;
+    /* font-size: 1em; */
     position: absolute;
     z-index: 10;
     background: #eee;
@@ -22,105 +24,57 @@
     box-sizing: border-box;
     z-index: 100;
 }
-/* Style the navigation menu */
-.navbar-nav {
-  width: 100%;
-  overflow: auto;
-}
 
-/* Navigation links */
-.navbar a {
-  float: left;
-  padding: 10px;
-  color: white;
-  text-decoration: none;
-  font-size: 17px;
-  width: 25%; /* Four equal-width links. If you have two links, use 50%, and 33.33% for three links, etc.. */
-  text-align: center; /* If you want the text to be centered */
-}
-
-/* Add a background color on mouse-over */
-.navbar a:hover {
-  background-color: #555;
-}
-
-/* Style the current/active link */
-.navbar a.active {
-  background-color: #000;
-}
-
-/* Add responsiveness - on screens less than 500px, make the navigation links appear on top of each other, instead of next to each other */
-@media screen and (max-width: 500px) {
-  .navbar a {
-    float: none;
-    display: block;
-    width: 100%;
-    text-align: left; /* If you want the text to be left-aligned on small screens */
-  }
-}
 </style>
 <body>
-   <div class="navbar-dark text-white">
-        <div class="container">
-          <nav class="navbar px-0 navbar-expand-lg navbar-dark">
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarNavAltMarkup"
-              aria-controls="navbarNavAltMarkup"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
+  
+<div id="particles-js">
+
+      <nav class="navbar navbar-expand-md navbar-dark  bg-transparent mb-0 radius-0 "style="font-family:Courier;" >
+          <a href="#" class="navbar-brand">The Cyber Alliance</a>
+          <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
               <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a href="index.html" class="fa fa-home" style="font-size:20px;color:white"><strong> Home </strong></a>
-                <a href="event.html" class="fa fa-bug" style="font-size:20px;color:white"><strong> Events </strong> </a>
-                <a href="achievements.html" class="fa fa-trophy" style="font-size:20px;color:white"><strong> Achievements</strong> </a>
-                <a href="about.html" class="fa fa-info" style="font-size:20px;color:white"><strong> About ISC </strong> </a>
-                <a href="contact.html" class="fa fa-user-secret" style="font-size:20px;color:white"><strong> Contact Us</strong> </a>
-             </div>
-            </div>
-          </nav>
-        </div>
-      </div>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarCollapse" >
+              <div class="navbar-nav ml-auto" >
+                  <a href="index.html" class="nav-item nav-link active px-3"><i class="fa fa-home"></i></i>      Home</a>
+                  <a href="about.html" class="nav-item nav-link px-3 ">   <i class="fa fa-info"></i>       About TCA</a>
+                  <a href="event.html" class="nav-item nav-link px-3 "><i class="fa fa-calendar"></i>       Events</a>
+                  <a href="achievements.html" class="nav-item nav-link px-3 "><i class="fa fa-trophy"></i>       Achievements</a>
+                  <a href="contact.html" class="nav-item nav-link px-3  "><i class="fa fa-user-secret"></i>       Contact</a>
+              </div>
+
+          </div>
+      </nav>
 
 <!-- particles.js container -->
-<div id="particles-js">
-  <div class="panel jumbotron bg-transparent mb-0 radius-0">
+<div class="panel jumbotron bg-transparent mb-0 radius-0">
     <div class="container">
       <div class="row">
-        <div class="col-xl-6">
-          <h1 class="display-2">
-            Neon Glo<span class="vim-caret">w</span>
+        <div class="col-xl-8">
+          <h1 class="display-2 text-white">
+            <font face = "courier">The Cyber Allianc<span class="vim-caret">e </font></span>
           </h1>
           <div class="lead mb-3 text-mono text-success">
-            This is a starter template with a jumbotron
+            <font face = "courier">-----------Tag Line----------</font>
           </div>
-          <div class="text-mono">
+          <div style="font-family:Courier;">
+
             <a
               href="#!"
-              title="Download Theme"
-              class="btn btn-success btn-shadow px-3 my-2 ml-0 text-left"
+              class="btn btn btn-outline-light btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left "
             >
-              A Button
-            </a>
-            <a
-              href="#!"
-              class="btn btn-danger btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left"
-            >
-              Another Button
+             Join the squad
             </a>
           </div>
-          <div class="text-darkgrey text-mono my-2">Some muted text</div>
-          <p class="mt-5 text-grey text-spacey">
+          <div class="text-darkgrey text-mono my-2 text-success"><font face = "courier">-----------Tag Line----------</font>
+          <p class="mt-5 text-grey text-spacey"><font face = "courier">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Architecto, dignissimos provident. Alias, aliquid, cum cumque
             deleniti dignissimos eos exercitationem explicabo illum
             inventore laboriosam nihil nobis nostrum praesentium recusandae
-            sequi, sint!
+            sequi, sint!</font>
           </p>
         </div>
       </div>
