--- a/team-tca.html
+++ b/team-tca.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Achievements</title>
+    <title>The Team TCA</title>
     <meta name="description" content="particles.js is a lightweight JavaScript library for creating particles.">
     <meta name="author" content="Vincent Garreau" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -47,9 +47,9 @@
                 <div class="navbar-nav ml-auto">
                     <a href="index.html" class="nav-item nav-link px-3"><i class="fa fa-home"></i></i> Home</a>
                     <a href="events.html" class="nav-item nav-link px-3 "><i class="fa fa-calendar"></i> Events</a>
-                    <a href="achievements.html" class="nav-item nav-link px-3 active"><i class="fa fa-trophy"></i> Achievements</a>
+                    <a href="achievements.html" class="nav-item nav-link px-3"><i class="fa fa-trophy"></i> Achievements</a>
                     <a href="code-of-conduct.html" class="nav-item nav-link px-3"><i class="fa fa-terminal"></i> Code of Conduct</a>
-                    <a href="team-tca.html" class="nav-item nav-link px-3"><i class="fa fa-users"></i> Team TCA</a>
+                    <a href="team-tca.html" class="nav-item nav-link px-3 active"><i class="fa fa-users"></i> Team TCA</a>
                     <a href="about.html" class="nav-item nav-link px-3"> <i class="fa fa-info"></i> About TCA</a>
                 </div>
             </div>
