--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
                         <h4 class="card-title text-center">Meet Up</h4>
                         <p class="card-text  text-center"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam </p>
                     </div>
-                    <div class="card card-body h-100 shadow p-3 mb-5 bg-#191970 rounded" align="center">
+                    <div class="card card-body h-100 shadow p-3 mb-5 rounded" align="center">
                         <div align="center">
                             <span class="fa-stack fa-4x"><i class="fa fa-flag fa-stack-4x"></i></span>
                         </div>
@@ -118,14 +118,14 @@
                     </div>
                 </div>
                 <div class="card-deck center">
-                    <div class="card card-body h-100 shadow p-3 mb-5 bg-#191970 rounded" align="center">
+                    <div class="card card-body h-100 shadow p-3 mb-5 rounded" align="center">
                         <div align="center">
                             <span class="fa-stack fa-4x"><i class="fa fa-video-camera fa-stack-4x"></i></span>
                         </div>
                         <h4 class="card-title text-center">Conference</h4>
                         <p class="card-text  text-center"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam </p>
                     </div>
-                    <div class="card card-body h-100 shadow p-3 mb-5 bg-#191970 rounded" align="center">
+                    <div class="card card-body h-100 shadow p-3 mb-5 rounded" align="center">
                         <div align="center">
                             <span class="fa-stack fa-4x"><i class="fa fa-bullhorn fa-stack-4x"></i></span>
                         </div>
@@ -176,6 +176,16 @@
             <p>Copyright &copy; 2020. All Rights Reserved</p>
         </div>
     </footer>
+    <!-- scripts -->
+    <script src="js/particles.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/lib/stats.js"></script>
+
+    <!-- stats.js -->
+    <script src="js/lib/stats.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 
 </html>
