Updated Code of Conduct

--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -40,7 +40,7 @@
     <section>
         <div class="content">
             <h2><span class="c">c</span>ode <span class="c">o</span>f <span class="c">c</span>onduct</h2>
-            <div class="first col-md-6 col-lg-6 col-sm-12 offset-3">
+            <div class="first col-md-6 col-lg-6 col-sm-12 offset-md-3">
                 <strong><p>We believe only in White Hat Hacking. On the other hand, we condemn Black Hat Hacking.</p></strong><br>
                 <p>The articles, tutorials, and demos provided by TCA. are for informational and educational purposes only, and for those who’re willing and curious to know and learn about Ethical Hacking, Security, and Penetration Testing. </p><br>
                 <p>Any time the word “Hacking” that is used on this site shall be regarded as Ethical Hacking.</p><br>
