--- a/about.html
+++ b/about.html
@@ -104,17 +104,17 @@
                 <div class="card-deck center">
                     <div class="card card-body h-100 shadow p-3 mb-5 rounded" align="center">
                         <div align="center">
-                            <span class="fa-stack fa-4x"><i class="fa fa-meetup fa-stack-4x"></i></span>
+                            <span class="fa-stack fa-4x"><i class="fa fa-group fa-stack-4x"></i></span>
                         </div>
-                        <h4 class="card-title text-center">Meet Up</h4>
-                        <p class="card-text  text-center"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam </p>
+                        <h4 class="card-title text-center">Live Session</h4>
+                        <p class="card-text  text-center"> Conducting Live Session for learning new things </p>
                     </div>
                     <div class="card card-body h-100 shadow p-3 mb-5 rounded" align="center">
                         <div align="center">
                             <span class="fa-stack fa-4x"><i class="fa fa-flag fa-stack-4x"></i></span>
                         </div>
                         <h4 class="card-title text-center">Capture The Flag</h4>
-                        <p class="card-text  text-center"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam </p>
+                        <p class="card-text  text-center"> Hosting CTF Challenges for the students for testing their skills </p>
                     </div>
                 </div>
                 <div class="card-deck center">
@@ -122,15 +122,15 @@
                         <div align="center">
                             <span class="fa-stack fa-4x"><i class="fa fa-video-camera fa-stack-4x"></i></span>
                         </div>
-                        <h4 class="card-title text-center">Conference</h4>
-                        <p class="card-text  text-center"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam </p>
+                        <h4 class="card-title text-center">Webinar</h4>
+                        <p class="card-text  text-center"> Conducting Webinars & Online Sessions for spreading the knowledge of latest Cyber Security trends </p>
                     </div>
                     <div class="card card-body h-100 shadow p-3 mb-5 rounded" align="center">
                         <div align="center">
-                            <span class="fa-stack fa-4x"><i class="fa fa-bullhorn fa-stack-4x"></i></span>
+                            <span class="fa-stack fa-4x"><i class="fa fa-puzzle-piece fa-stack-4x"></i></span>
                         </div>
-                        <h4 class="card-title text-center">TCS Talks</h4>
-                        <p class="card-text  text-center"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam </p>
+                        <h4 class="card-title text-center">Quiz Competition</h4>
+                        <p class="card-text  text-center"> Organizing Quizzes for sharpening their Infosec knowledge </p>
                     </div>
                 </div>
             </div>
