--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ml-auto">
                     <a href="index.html" class="nav-item nav-link active px-3"><i class="fa fa-home"></i></i> Home</a>
-                    <a href="events.html" class="nav-item nav-link px-3 "><i class="fa fa-calendar"></i> Events</a>
+                    <a href="event.html" class="nav-item nav-link px-3 "><i class="fa fa-calendar"></i> Events</a>
                     <a href="achievements.html" class="nav-item nav-link px-3 "><i class="fa fa-trophy"></i> Achievements</a>
                     <a href="code-of-conduct.html" class="nav-item nav-link px-3  "><i class="fa fa-terminal"></i> Code of Conduct</a>
                     <a href="team-tca.html" class="nav-item nav-link px-3  "><i class="fa fa-users"></i> Team TCA</a>
