--- a/events.html
+++ b/events.html
@@ -70,7 +70,7 @@
                 <br>
                 <div class="webinar">
                     <h1>Introducing The Cyber Alliance</h1>
-                    <h3>...</h3>
+                    <h3>A perfect kickstart for your learning adventure...</h3>
 
                     <h4 style="line-height: 2;">3<sup>rd</sup> October, 2020</h4><br>
                     <!-- <a href="#" class="btn btn-lg btn-red">Register Now</a> -->
